[gd_scene load_steps=6 format=3 uid="uid://bjevsw5r631f1"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_crn14"]
[ext_resource type="Script" uid="uid://dnjt5hkgucm3" path="res://gdre_resource_preview.gd" id="1_tgfma"]
[ext_resource type="Texture2D" uid="uid://b3l2iqhf34x5c" path="res://gdre_icons/gdre_LogoBig.svg" id="3_gp5ss"]
[ext_resource type="PackedScene" uid="uid://cuifra52kkek" path="res://gdre_media_player.tscn" id="4_crn14"]
[ext_resource type="PackedScene" uid="uid://ckg8dycpxer5o" path="res://gdre_text_editor.tscn" id="5_1bufa"]

[node name="GdreResourcePreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_crn14")
script = ExtResource("1_tgfma")

[node name="VBoxContainer" type="VSplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 220

[node name="ResourceView" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TextureView" type="Control" parent="VBoxContainer/ResourceView"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ResourceView/TextureView"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gp5ss")
expand_mode = 1
stretch_mode = 5

[node name="TextureInfo" type="Label" parent="VBoxContainer/ResourceView/TextureView"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -74.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 14
text = "16x16 RGBA8
No Mipmaps
Memory: 1024 B"

[node name="MediaPlayer" parent="VBoxContainer/ResourceView" instance=ExtResource("4_crn14")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="TextView" parent="VBoxContainer/ResourceView" instance=ExtResource("5_1bufa")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MeshPreviewer" type="MeshPreviewer" parent="VBoxContainer/ResourceView"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScenePreviewer3D" type="ScenePreviewer" parent="VBoxContainer/ResourceView"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourceInfoContainer" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ResourceInfo" type="RichTextLabel" parent="VBoxContainer/ResourceInfoContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b]Path:[/b]
[b]Type:[/b]
[b]Format:[/b]"

[connection signal="drag_ended" from="VBoxContainer" to="." method="_on_v_box_container_drag_ended"]
[connection signal="drag_started" from="VBoxContainer" to="." method="_on_v_box_container_drag_started"]
